# FingerTracking

./: BMPFile.cpp  BMPFile.h  CMakeLists.txt  DemoApp.cpp  DemoApp.h  Esqueleto.cpp  Esqueleto.h  EsqueletoCalculos.cpp  Extras.cpp  Extras.h  FingerTracking.zpr  FragmentShader.frag  ImageFile.cpp  ImageFile.h  MyFreenectDevice.cpp  MyFreenectDevice.h  PNGFile.cpp  PNGFile.h  PPMFile.cpp  PPMFile.h  TGAFile.cpp  TGAFile.h  Texture2D.cpp  Texture2D.h  VectorMath.h  VertexShader.vert  main.cpp
Dependencies/Cimg/include/: cimg.h
Dependencies/GLEW_WIN32/lib/: glew32.lib  glew32d.lib  glew32s.lib  glew32sd.lib  libglew32s.lib  libglew32sd.lib
